# PixelEngine

./: .clang-format  .gitignore  CMakeLists.txt  PixelEngine.vcxproj  PixelEngine.vcxproj.filters  PixelRenderer.cpp  PixelRenderer.h  compile_commands.json
shaders/: NoLightingShaderFrag.spv  NoLightingShaderVert.spv  comp.spv  compile.bat  compile.sh  frag.spv  grid.frag  grid.vert  gridFrag.spv  gridVert.spv  shader.frag  shader.vert  vert.spv
source/: PixelComputePipeline.cpp  PixelComputePipeline.h  PixelGraphicsPipeline.cpp  PixelGraphicsPipeline.h  PixelImage.cpp  PixelImage.h  PixelLogger.cpp  PixelLogger.h  PixelMemManager.cpp  PixelMemManager.h  PixelObject.cpp  PixelObject.h  PixelRenderer.cpp  PixelRenderer.h  PixelScene.cpp  PixelScene.h  PixelUI.cpp  PixelUI.hpp  PixelWindow.cpp  PixelWindow.h  Utility.h  kb_input.cpp  kb_input.h  main.cpp
